# internal/models/requests/logout.go
@@ -1,0 +1,7 @@
+package requests
+
+
+// LogoutRequest swagger::model
+type LogoutRequest struct {
+	RefreshToken string
+}
